# NoMoreRoads-Manga-Demographic-Prediction

./: .editorconfig  .gitignore  .mailmap  .vimrc  Anilist_Manga_Length_Prediction_Project.Rproj  LICENSE  Prediction.py  README.md  data_gathering  data_gathering.py  manga.csv  predict.ipynb  predict_reorganization.ipynb  prediction.R  pyproject.toml  readme.txt
1_data_gather/: README.md  data_gather  readme.txt  tags_gather
2_data_explore/: README.md  data_explore.ipynb  readme.txt
9_experiments/: predict.ipynb
data/: data_dictionary.md  tag_reference.csv
